istio/prod/authorizationpolicy/allow-frontend-to-api-gateway.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-frontend-to-api-gateway
  namespace: middle
spec:
  selector:
    matchLabels:
      app: api-gateway

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/app/sa/frontend
