istio/prod/authorizationpolicy/allow-ingress-to-frontend.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: frontend

  action: ALLOW

  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-ingress/sa/public-gateway-istio
